add ssh-keygen to CIT image

--- a/imagetest/Dockerfile
+++ b/imagetest/Dockerfile
@@ -30,6 +30,7 @@ RUN cd imagetest/test_suites; for suite in *; do \
   done
 
 FROM alpine:edge
+RUN apk add --no-cache openssh-keygen
 COPY --from=builder /out/* /
 
 ENTRYPOINT ["/manager"]
