add producing the current timestamp in ms to the generate-timestamp Concourse task

--- a/concourse/tasks/generate-timestamp.yaml
+++ b/concourse/tasks/generate-timestamp.yaml
@@ -13,4 +13,4 @@ run:
   path: sh
   args:
   - -exc
-  - "timestamp=$(date '+%s'); echo $timestamp | tee timestamp/timestamp"
+  - "timestamp=$(date '+%s%N'); echo $(($timestamp/1000000000)) | tee timestamp/timestamp; echo $(($timestamp/1000000)) > timestamp/timestamp-ms"
