--- a/container_images/cloudbuild.yaml
+++ b/container_images/cloudbuild.yaml
@@ -34,6 +34,8 @@ images:
   - 'gcr.io/$PROJECT_ID/build-essential:$COMMIT_SHA'
   - 'gcr.io/$PROJECT_ID/autoversioner:latest'
   - 'gcr.io/$PROJECT_ID/autoversioner:$COMMIT_SHA'
+  - 'gcr.io/$PROJECT_ID/concourse-metrics:latest'
+  - 'gcr.io/$PROJECT_ID/concourse-metrics:$COMMIT_SHA'
   - 'gcr.io/$PROJECT_ID/flake8:latest'
   - 'gcr.io/$PROJECT_ID/flake8:$COMMIT_SHA'
   - 'gcr.io/$PROJECT_ID/gointegtest:latest'
