add apk update for ca-certificates

--- a/container_images/concourse-metrics/Dockerfile
+++ b/container_images/concourse-metrics/Dockerfile
@@ -7,6 +7,7 @@ WORKDIR /
 # this needs to be run from root of googlecloudplatform/guest-test-infra
 COPY . /
 RUN CGO_ENABLED=0 go build -o /publish-job-result ./container_images/concourse-metrics/cmd/publish-job-result/main.go
+RUN apk --update add ca-certificates
 
 RUN chmod +x /publish-job-result
 
