--- a/container_images/gotest/Dockerfile
+++ b/container_images/gotest/Dockerfile
@@ -11,7 +11,7 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-FROM golang
+FROM golang:1.13.15
 
 RUN apt-get update && apt-get -y install bash ca-certificates curl libssl-dev wget && \
     rm -rf /var/cache/apt/archives
