instrument the dev-image-build pipeline with success/failure/duration metrics

--- a/concourse/pipelines/dev-image-build.yaml
+++ b/concourse/pipelines/dev-image-build.yaml
@@ -72,6 +72,10 @@ jobs:
   plan:
   - get: compute-image-tools
   - get: guest-test-infra
+  - task: generate-timestamp
+    file: guest-test-infra/concourse/tasks/generate-timestamp.yaml
+  - load_var: start-timestamp-ms
+    file: timestamp/timestamp-ms
   - task: generate-build-id
     file: guest-test-infra/concourse/tasks/generate-build-id.yaml
     vars:
@@ -96,10 +100,34 @@ jobs:
       gcs_url: ((.:gcs-url))
       google_cloud_repo: "stable"
       build_date: ((.:build-date))
+  on_success:
+    task: success
+    file: guest-test-infra/concourse/tasks/publish-job-result.yaml
+    vars:
+      pipeline: "dev-image-build"
+      job: "build-debian-10-worker"
+      task: "publish-job-result"
+      result_state: "success"
+      start_timestamp: ((.:start-timestamp-ms))
+      metric_path: "concourse/job/duration"
+  on_failure:
+    task: failure
+    file: guest-test-infra/concourse/tasks/publish-job-result.yaml
+    vars:
+      pipeline: "dev-image-build"
+      job: "build-debian-10-worker"
+      task: "publish-job-result"
+      result_state: "failure"
+      start_timestamp: ((.:start-timestamp-ms))
+      metric_path: "concourse/job/duration"
 - name: build-centos-7-dev
   plan:
   - get: compute-image-tools
   - get: guest-test-infra
+  - task: generate-timestamp
+    file: guest-test-infra/concourse/tasks/generate-timestamp.yaml
+  - load_var: start-timestamp-ms
+    file: timestamp/timestamp-ms
   - task: generate-build-id
     file: guest-test-infra/concourse/tasks/generate-build-id.yaml
     vars:
@@ -123,10 +151,34 @@ jobs:
       wf: "linux_dev/centos_7_dev.wf.json"
       gcs_url: ((.:gcs-url))
       build_date: ((.:build-date))
+  on_success:
+    task: success
+    file: guest-test-infra/concourse/tasks/publish-job-result.yaml
+    vars:
+      pipeline: "dev-image-build"
+      job: "build-centos-7-dev"
+      task: "publish-job-result"
+      result_state: "success"
+      start_timestamp: ((.:start-timestamp-ms))
+      metric_path: "concourse/job/duration"
+  on_failure:
+    task: failure
+    file: guest-test-infra/concourse/tasks/publish-job-result.yaml
+    vars:
+      pipeline: "dev-image-build"
+      job: "build-centos-7-dev"
+      task: "publish-job-result"
+      result_state: "failure"
+      start_timestamp: ((.:start-timestamp-ms))
+      metric_path: "concourse/job/duration"
 - name: build-centos-8-dev
   plan:
   - get: compute-image-tools
   - get: guest-test-infra
+  - task: generate-timestamp
+    file: guest-test-infra/concourse/tasks/generate-timestamp.yaml
+  - load_var: start-timestamp-ms
+    file: timestamp/timestamp-ms
   - task: generate-build-id
     file: guest-test-infra/concourse/tasks/generate-build-id.yaml
     vars:
@@ -150,10 +202,34 @@ jobs:
       wf: "linux_dev/centos_8_dev.wf.json"
       gcs_url: ((.:gcs-url))
       build_date: ((.:build-date))
+  on_success:
+    task: success
+    file: guest-test-infra/concourse/tasks/publish-job-result.yaml
+    vars:
+      pipeline: "dev-image-build"
+      job: "build-centos-8-dev"
+      task: "publish-job-result"
+      result_state: "success"
+      start_timestamp: ((.:start-timestamp-ms))
+      metric_path: "concourse/job/duration"
+  on_failure:
+    task: failure
+    file: guest-test-infra/concourse/tasks/publish-job-result.yaml
+    vars:
+      pipeline: "dev-image-build"
+      job: "build-centos-8-dev"
+      task: "publish-job-result"
+      result_state: "failure"
+      start_timestamp: ((.:start-timestamp-ms))
+      metric_path: "concourse/job/duration"
 - name: build-debian-9-dev
   plan:
   - get: compute-image-tools
   - get: guest-test-infra
+  - task: generate-timestamp
+    file: guest-test-infra/concourse/tasks/generate-timestamp.yaml
+  - load_var: start-timestamp-ms
+    file: timestamp/timestamp-ms
   - task: generate-build-id
     file: guest-test-infra/concourse/tasks/generate-build-id.yaml
     vars:
@@ -177,10 +253,34 @@ jobs:
       wf: "linux_dev/debian_9_dev.wf.json"
       gcs_url: ((.:gcs-url))
       build_date: ((.:build-date))
+  on_success:
+    task: success
+    file: guest-test-infra/concourse/tasks/publish-job-result.yaml
+    vars:
+      pipeline: "dev-image-build"
+      job: "build-debian-9-dev"
+      task: "publish-job-result"
+      result_state: "success"
+      start_timestamp: ((.:start-timestamp-ms))
+      metric_path: "concourse/job/duration"
+  on_failure:
+    task: failure
+    file: guest-test-infra/concourse/tasks/publish-job-result.yaml
+    vars:
+      pipeline: "dev-image-build"
+      job: "build-debian-9-dev"
+      task: "publish-job-result"
+      result_state: "failure"
+      start_timestamp: ((.:start-timestamp-ms))
+      metric_path: "concourse/job/duration"
 - name: build-debian-10-dev
   plan:
   - get: compute-image-tools
   - get: guest-test-infra
+  - task: generate-timestamp
+    file: guest-test-infra/concourse/tasks/generate-timestamp.yaml
+  - load_var: start-timestamp-ms
+    file: timestamp/timestamp-ms
   - task: generate-build-id
     file: guest-test-infra/concourse/tasks/generate-build-id.yaml
     vars:
@@ -204,10 +304,34 @@ jobs:
       wf: "linux_dev/debian_10_dev.wf.json"
       gcs_url: ((.:gcs-url))
       build_date: ((.:build-date))
+  on_success:
+    task: success
+    file: guest-test-infra/concourse/tasks/publish-job-result.yaml
+    vars:
+      pipeline: "dev-image-build"
+      job: "build-centos-10-dev"
+      task: "publish-job-result"
+      result_state: "success"
+      start_timestamp: ((.:start-timestamp-ms))
+      metric_path: "concourse/job/duration"
+  on_failure:
+    task: failure
+    file: guest-test-infra/concourse/tasks/publish-job-result.yaml
+    vars:
+      pipeline: "dev-image-build"
+      job: "build-centos-10-dev"
+      task: "publish-job-result"
+      result_state: "failure"
+      start_timestamp: ((.:start-timestamp-ms))
+      metric_path: "concourse/job/duration"
 - name: build-ubuntu-1604-dev
   plan:
   - get: compute-image-tools
   - get: guest-test-infra
+  - task: generate-timestamp
+    file: guest-test-infra/concourse/tasks/generate-timestamp.yaml
+  - load_var: start-timestamp-ms
+    file: timestamp/timestamp-ms
   - task: generate-build-id
     file: guest-test-infra/concourse/tasks/generate-build-id.yaml
     vars:
@@ -231,10 +355,34 @@ jobs:
       wf: "linux_dev/ubuntu_1604_dev.wf.json"
       gcs_url: ((.:gcs-url))
       build_date: ((.:build-date))
+  on_success:
+    task: success
+    file: guest-test-infra/concourse/tasks/publish-job-result.yaml
+    vars:
+      pipeline: "dev-image-build"
+      job: "build-ubuntu-1604-dev"
+      task: "publish-job-result"
+      result_state: "success"
+      start_timestamp: ((.:start-timestamp-ms))
+      metric_path: "concourse/job/duration"
+  on_failure:
+    task: failure
+    file: guest-test-infra/concourse/tasks/publish-job-result.yaml
+    vars:
+      pipeline: "dev-image-build"
+      job: "build-ubuntu-1604-dev"
+      task: "publish-job-result"
+      result_state: "failure"
+      start_timestamp: ((.:start-timestamp-ms))
+      metric_path: "concourse/job/duration"
 - name: build-ubuntu-1804-dev
   plan:
   - get: compute-image-tools
   - get: guest-test-infra
+  - task: generate-timestamp
+    file: guest-test-infra/concourse/tasks/generate-timestamp.yaml
+  - load_var: start-timestamp-ms
+    file: timestamp/timestamp-ms
   - task: generate-build-id
     file: guest-test-infra/concourse/tasks/generate-build-id.yaml
     vars:
@@ -258,12 +406,36 @@ jobs:
       wf: "linux_dev/ubuntu_1804_dev.wf.json"
       gcs_url: ((.:gcs-url))
       build_date: ((.:build-date))
+  on_success:
+    task: success
+    file: guest-test-infra/concourse/tasks/publish-job-result.yaml
+    vars:
+      pipeline: "dev-image-build"
+      job: "build-ubuntu-1804-dev"
+      task: "publish-job-result"
+      result_state: "success"
+      start_timestamp: ((.:start-timestamp-ms))
+      metric_path: "concourse/job/duration"
+  on_failure:
+    task: failure
+    file: guest-test-infra/concourse/tasks/publish-job-result.yaml
+    vars:
+      pipeline: "dev-image-build"
+      job: "build-ubuntu-1804-dev"
+      task: "publish-job-result"
+      result_state: "failure"
+      start_timestamp: ((.:start-timestamp-ms))
+      metric_path: "concourse/job/duration"
 
 # Publish to dev stage
 - name: publish-debian-staging
   plan:
   - get: guest-test-infra
   - get: compute-image-tools
+  - task: generate-timestamp
+    file: guest-test-infra/concourse/tasks/generate-timestamp.yaml
+  - load_var: start-timestamp-ms
+    file: timestamp/timestamp-ms
   - get: debian-9-dev-gcs
     passed: [build-debian-9-dev]
     trigger: false
@@ -290,11 +462,35 @@ jobs:
       publish_version: ((.:publish-version))
       wf: "linux_dev/debian_staging.publish.json"
       environment: "test"
+  on_success:
+    task: success
+    file: guest-test-infra/concourse/tasks/publish-job-result.yaml
+    vars:
+      pipeline: "dev-image-build"
+      job: "publish-debian-staging"
+      task: "publish-job-result"
+      result_state: "success"
+      start_timestamp: ((.:start-timestamp-ms))
+      metric_path: "concourse/job/duration"
+  on_failure:
+    task: failure
+    file: guest-test-infra/concourse/tasks/publish-job-result.yaml
+    vars:
+      pipeline: "dev-image-build"
+      job: "publish-debian-staging"
+      task: "publish-job-result"
+      result_state: "failure"
+      start_timestamp: ((.:start-timestamp-ms))
+      metric_path: "concourse/job/duration"
 
 - name: publish-to-testing-debian-10-worker
   plan:
   - get: guest-test-infra
   - get: compute-image-tools
+  - task: generate-timestamp
+    file: guest-test-infra/concourse/tasks/generate-timestamp.yaml
+  - load_var: start-timestamp-ms
+    file: timestamp/timestamp-ms
   - get: debian-10-worker-gcs
     passed: [build-debian-10-worker]
     trigger: false
@@ -316,10 +512,34 @@ jobs:
       publish_version: ((.:publish-version))
       wf: "debian/debian_10_worker.publish.json"
       environment: "test"
+  on_success:
+    task: success
+    file: guest-test-infra/concourse/tasks/publish-job-result.yaml
+    vars:
+      pipeline: "dev-image-build"
+      job: "publish-to-testing-debian-10-worker"
+      task: "publish-job-result"
+      result_state: "success"
+      start_timestamp: ((.:start-timestamp-ms))
+      metric_path: "concourse/job/duration"
+  on_failure:
+    task: failure
+    file: guest-test-infra/concourse/tasks/publish-job-result.yaml
+    vars:
+      pipeline: "dev-image-build"
+      job: "publish-to-testing-debian-10-worker"
+      task: "publish-job-result"
+      result_state: "failure"
+      start_timestamp: ((.:start-timestamp-ms))
+      metric_path: "concourse/job/duration"
 - name: publish-to-staging-debian-10-worker
   plan:
   - get: guest-test-infra
   - get: compute-image-tools
+  - task: generate-timestamp
+    file: guest-test-infra/concourse/tasks/generate-timestamp.yaml
+  - load_var: start-timestamp-ms
+    file: timestamp/timestamp-ms
   - get: debian-10-worker-gcs
     passed: [build-debian-10-worker]
     trigger: false
@@ -341,10 +561,34 @@ jobs:
       publish_version: ((.:publish-version))
       wf: "debian/debian_10_worker.publish.json"
       environment: "staging"
+  on_success:
+    task: success
+    file: guest-test-infra/concourse/tasks/publish-job-result.yaml
+    vars:
+      pipeline: "dev-image-build"
+      job: "publish-to-staging-debian-10-worker"
+      task: "publish-job-result"
+      result_state: "success"
+      start_timestamp: ((.:start-timestamp-ms))
+      metric_path: "concourse/job/duration"
+  on_failure:
+    task: failure
+    file: guest-test-infra/concourse/tasks/publish-job-result.yaml
+    vars:
+      pipeline: "dev-image-build"
+      job: "publish-to-staging-debian-10-worker"
+      task: "publish-job-result"
+      result_state: "failure"
+      start_timestamp: ((.:start-timestamp-ms))
+      metric_path: "concourse/job/duration"
 - name: publish-to-prod-debian-10-worker
   plan:
   - get: guest-test-infra
   - get: compute-image-tools
+  - task: generate-timestamp
+    file: guest-test-infra/concourse/tasks/generate-timestamp.yaml
+  - load_var: start-timestamp-ms
+    file: timestamp/timestamp-ms
   - get: debian-10-worker-gcs
     passed: [publish-to-staging-debian-10-worker]
     trigger: false
@@ -366,6 +610,26 @@ jobs:
       publish_version: ((.:publish-version))
       wf: "debian/debian_10_worker.publish.json"
       environment: "prod"
+  on_success:
+    task: success
+    file: guest-test-infra/concourse/tasks/publish-job-result.yaml
+    vars:
+      pipeline: "dev-image-build"
+      job: "publish-to-prod-debian-10-worker"
+      task: "publish-job-result"
+      result_state: "success"
+      start_timestamp: ((.:start-timestamp-ms))
+      metric_path: "concourse/job/duration"
+  on_failure:
+    task: failure
+    file: guest-test-infra/concourse/tasks/publish-job-result.yaml
+    vars:
+      pipeline: "dev-image-build"
+      job: "publish-to-prod-debian-10-worker"
+      task: "publish-job-result"
+      result_state: "failure"
+      start_timestamp: ((.:start-timestamp-ms))
+      metric_path: "concourse/job/duration"
 
 groups:
 - name: debian
