remove redundant job arg and move metric path to publish-job-result task definition

--- a/concourse/tasks/publish-job-result.yaml
+++ b/concourse/tasks/publish-job-result.yaml
@@ -23,4 +23,4 @@ run:
   - --task=publish-job-result
   - --result-state=((result_state))
   - --start-timestamp=((start_timestamp))
-  - --metric-path=((metric_path))
+  - --metric-path="concourse/job/duration"
